--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint . --ext .ts --ext .tsx",
-    "lint:fix": "eslint --fix . --ext .ts --ext .tsx"
+    "lint": "eslint . --ext .js --ext .jsx",
+    "lint:fix": "eslint --fix . --ext .js --ext .jsx"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +45,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prettier": "^5.1.3",
